--- a/src/components/StaffStep.module.css
+++ b/src/components/StaffStep.module.css
@@ -100,6 +100,7 @@
 
 .canvasArea {
   flex: 1;
+  min-width: 600px;
   display: flex;
   flex-direction: column;
   align-items: center;
